fixed warnings (#55)